# snakypy

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  snakypy.rst  snakypy.utils.rst  usage.md  usage.rst
snakypy/: __init__.py  __main__.py  ansi.py  bmi.py  calc.py  calculation.py  colorful.py  console.py  decorators.py  file.py  helpers.py  imc.py  json.py  path.py  pick.py  tools.py  utilities.py  utils.py
snakypy/ansi/: __init__.py
snakypy/calculation/: __init__.py
snakypy/console/: __init__.py  billboard.py  colorful.py  commands.py  credence.py  credits.py  loading.py  pick.py
snakypy/create/: __init__.py  file.py  json.py
snakypy/file/: __init__.py
snakypy/json/: __init__.py  manager.py
snakypy/read/: __init__.py  file.py  json.py
snakypy/tools/: __init__.py  ansi.py
snakypy/update/: json.py
snakypy/utilities/: __init__.py  basic.py  commands.py  extensions.py  percentage.py  pick.py  ruthless.py  utilities.py
snakypy/utils/: calc.py  catch.py  decorators.py  exceptions.py  os.py  stiff.py
tests/: __init__.py  test_bake_project.py
tests/.tmp/: file.json
