[tool.poetry]
name = "snakypy"
version = "0.3.6"
description = "Snakypy is a package that contains code ready to assist in the development of packages/applications so as not to replicate the code."
authors = ["William C. Canin <https://williamcanin.github.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "0.8.post1"

[tool.poetry.dev-dependencies]
twine = "3.1.1"
wheel = "0.34.2"
flake8 = "3.8.2"
tox = "3.15.1"
sphinx = "3.1.1"
sphinx-rtd-theme = "0.5.0"
recommonmark = "0.6.0"
pytest = "5.4.3"
pytest-runner = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
